--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroui/navbar": "^2.2.25",
     "@heroui/system": "^2.4.23",
     "@heroui/theme": "^2.4.23",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
     "mongodb": "^7.0.0",
