--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
     "next": "^16.0.5",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
