--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@heroui/system": "^2.4.23",
     "@heroui/theme": "^2.4.23",
     "@vercel/analytics": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.555.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
     "next": "^16.0.5",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
@@ -31,6 +35,7 @@
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.5",
     "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
